Fixed issue with course selector not hidding overflowing

--- a/css/main.css
+++ b/css/main.css
@@ -511,6 +511,11 @@ td{
     width: 45px;
 }
 
+#courseSelector > ul{
+    height: 100%;
+}
+
+
 @media (max-width: 767px) {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
         color: #fbfeff;
